# conan-vcvrack-sdk-plugin-example

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  plugin.json
.github/workflows/: build-plugin.yml
src/: CMakeLists.txt  plugin.cpp  plugin.hpp
